test/tests/stages/8_loops/valid/extra_credit/switch_default_only.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  switch
  (
  identifier(a)
  )
  default
  :
  return
  const int(1)
  ;
  return
  const int(0)
  ;
  }
