test/tests/stages/8_loops/invalid_semantics/extra_credit/non_constant_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  switch
  (
  identifier(a)
  +
  const int(1)
  )
  {
  case
  const int(0)
  :
  return
  const int(0)
  ;
  case
  identifier(a)
  :
  return
  const int(1)
  ;
  case
  const int(1)
  :
  return
  const int(2)
  ;
  }
  }
